@@ -1,3 +1,8 @@
+2007-02-15  Akim Demaille  <akim@lrde.epita.fr>
+
+	Fix xpass handling
+	* check.mk: XPASSes are failures.
+
 2007-02-13  Akim Demaille  <demaille@gostai.com>
 
 	Use another green for XFAIL
